[tool.poetry]
name = "nl2query"
version = "0.1.0"
description = ""
authors = ["Chirayu-Tripathi <chirayutripathi7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
scriv = {extras = ["toml"], version = "^1.3.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
