[tool.poetry]
name = "nl2query"
version = "0.1.8"
description = ""
authors = ["Chirayu-Tripathi <chirayutripathi7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = { version = "^2.0.1", source = "pytorch" }
regex = "^2023.6.3"
transformers = "^4.39.0"
pandas = "^1.5.3"
peft = "^0.5.0"
accelerate = "^0.29.3"
bitsandbytes = "^0.43.1"
einops = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
scriv = {extras = ["toml"], version = "^1.3.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
